--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/gdstk"]
 	path = deps/gdstk
 	url = git@github.com:heitzmann/gdstk.git
+[submodule "deps/ruler"]
+	path = deps/ruler
+	url = https://github.com/broccolimicro/ruler.git
